# fund78

./: .gitignore  Cargo.toml  README.md  client.html  fund78  fund78db  go.mod  main.go
action_logger/: action_logger.go
assert/: assert.go
cmd/ui/: main.go
demo/: README.md
docs/: .cursorrules  AGENT_INSTRUCTIONS.md  REQUIREMENTS.md
fund78Client/: index.html
internal/queue/: queue.go  queue_test.go
learning/: README.md
learning/01_trait_system_vec_box/: lesson.md
learning/01_trait_system_vec_box/exercises/: exercises-box-test.rs  exercises-vec-test.rs  exercises-worker-size.rs
learning/02_channels_mspc_broadcast/: lesson.md
learning/02_channels_mspc_broadcast/exercises/: exercises-broadcast-test.rs  exercises-channel-capacity.rs  exercises-input-handle-trace.rs  exercises-mpsc-multi.rs  exercises-mpsc-test.rs
learning/03_box_impact_for_vec/: lesson.md
learning/03_box_impact_for_vec/exercises/: exercises-box-comparison.rs  exercises-check-worker-size.rs  exercises-dyn-vs-static.rs  exercises-recursive-types.rs  exercises-stable-addresses.rs
src/: lib.rs  main.rs  sample.rs
src/input/: input.rs  mod.rs  polygon_input.rs
src/output/: mod.rs  output.rs  websocket_output.rs
src/worker/: bitcoin_price_worker.rs  mod.rs  worker.rs
svelte-app/: package-lock.json  package.json
svelte-app/src/: App.svelte
tunnel/: tunnel.go
tunnel_system/: action_logger.go  client.go  config.go  generator.go  tunnel.go  tunnel_system.go
